<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormPerfilTutorActivity">

    <include
        android:id="@+id/include_app_bar_top_cadastro"
        layout="@layout/app_action_bar_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include_app_bar_top_cadastro">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_numero_cartao"
                style="@style/WhiteChanges"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_numero_cartao"
                app:helperTextEnabled="false"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <br.com.sapereaude.maskedEditText.MaskedEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:mask="####.####.####.####"
                    app:allowed_chars="0123456789"
                    android:inputType="number"
                    android:maxLength="19"
                    android:textColor="@color/colorGrey" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/linlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_layout_numero_cartao">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout_validade"
                    style="@style/WhiteChanges"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:hint="@string/hint_validade"
                    android:inputType="number"
                    app:hintTextColor="@color/colorGrey"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_input_layout_numero_cartao">

                    <br.com.sapereaude.maskedEditText.MaskedEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:mask="##/##"
                        app:allowed_chars="0123456789"
                        android:inputType="number"
                        android:maxLength="5"
                        android:textColor="@color/colorGrey" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout_cvv"
                    style="@style/WhiteChanges"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:hint="@string/hint_cvv"
                    android:textColorHint="@color/colorGrey"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/text_input_layout_validade"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteY="72dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="3"
                        android:inputType="number"
                        android:textColor="@color/colorGrey" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_nome_titular"
                style="@style/WhiteChanges"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/hint_nome_titular"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linlay">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="100"
                    android:textColor="@color/colorGrey" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_cpf"
                style="@style/WhiteChanges"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/hint_cpf_titular"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_layout_nome_titular">

                <br.com.sapereaude.maskedEditText.MaskedEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    app:mask="###.###.###-###"
                    app:allowed_chars="0123456789"
                    android:maxLength="16"
                    android:textColor="@color/colorGrey" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_salvar_forma_pagamento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/colorPrimary"
                android:paddingVertical="20dp"
                android:text="@string/button_salvar"
                android:textColor="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_layout_cpf" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

